Added all scheduled wind farms to the dashboard

--- a/dashboards/wind.erb
+++ b/dashboards/wind.erb
@@ -6,6 +6,14 @@
     </li>
 
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+      <div data-id="ALL_WIND" data-view="Powernumber" data-title="" data-moreinfo=""></div>
+    </li>
+
+   <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+      <div data-id="BLUFF1" data-view="Powernumber" data-title="" data-moreinfo=""></div>
+    </li>
+
+    <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
       <div data-id="CNUNDAWF" data-view="Powernumber" data-title="Canunda (SA)" data-moreinfo=""></div>
     </li>
 
@@ -31,6 +39,74 @@
 
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
       <div data-id="GUNNING1" data-view="Powernumber" data-title="Gunning (NSW)" data-moreinfo=""></div>
+    </li>
+
+    <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+      <div data-id="HALLWF1" data-view="Powernumber" data-title="" data-moreinfo=""></div>
+    </li>
+
+    <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+      <div data-id="HALLWF2" data-view="Powernumber" data-title="" data-moreinfo=""></div>
+    </li>
+
+   <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+      <div data-id="LKBONNY1" data-view="Powernumber" data-title="" data-moreinfo=""></div>
+    </li>
+
+   <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+      <div data-id="LKBONNY2" data-view="Powernumber" data-title="" data-moreinfo=""></div>
+    </li>
+
+   <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+      <div data-id="LKBONNY3" data-view="Powernumber" data-title="" data-moreinfo=""></div>
+    </li>
+
+   <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+      <div data-id="MTMILLAR" data-view="Powernumber" data-title="" data-moreinfo=""></div>
+    </li>
+
+   <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+      <div data-id="NBHWF1" data-view="Powernumber" data-title="" data-moreinfo=""></div>
+    </li>
+
+   <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+      <div data-id="OAKLAND1" data-view="Powernumber" data-title="" data-moreinfo=""></div>
+    </li>
+
+    <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+      <div data-id="PORTWF" data-view="Powernumber" data-title="" data-moreinfo=""></div>
+    </li>
+
+    <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+      <div data-id="SNOWTWN1" data-view="Powernumber" data-title="" data-moreinfo=""></div>
+    </li>
+
+    <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+      <div data-id="STARHLWF" data-view="Powernumber" data-title="" data-moreinfo=""></div>
+    </li>
+
+   <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+      <div data-id="WATERLWF" data-view="Powernumber" data-title="" data-moreinfo=""></div>
+    </li>
+
+   <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+      <div data-id="WAUBRAWF" data-view="Powernumber" data-title="" data-moreinfo=""></div>
+    </li>
+
+   <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+      <div data-id="WOODLWN1" data-view="Powernumber" data-title="" data-moreinfo=""></div>
+    </li>
+
+   <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+      <div data-id="WOOLNTH1" data-view="Powernumber" data-title="" data-moreinfo=""></div>
+    </li>
+
+   <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+      <div data-id="WPWF" data-view="Powernumber" data-title="" data-moreinfo=""></div>
+    </li>
+
+   <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+      <div data-id="YAMBUKWF" data-view="Powernumber" data-title="" data-moreinfo=""></div>
     </li>
 
   </ul>
