Transformed number display into meters

--- a/dashboards/nem.erb
+++ b/dashboards/nem.erb
@@ -14,27 +14,27 @@
     </li>
 
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="ALL" data-view="Powernumber" data-title="" data-moreinfo=""></div>
+      <div data-id="ALL" data-view="Meter" data-title="" data-moreinfo="" data-min="0" data-max="100000"></div>
     </li>
 
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="ALL_BLACK_COAL" data-view="Powernumber" data-title="" data-moreinfo=""></div>
+      <div data-id="ALL_BLACK_COAL" data-view="Meter" data-title="" data-moreinfo="" data-min="0" data-max="100000"></div>
     </li>
 
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="ALL_BROWN_COAL" data-view="Powernumber" data-title="" data-moreinfo=""></div>
+      <div data-id="ALL_BROWN_COAL" data-view="Meter" data-title="" data-moreinfo="" data-min="0" data-max="100000"></div>
     </li>
 
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="ALL_NATURAL_GAS" data-view="Powernumber" data-title="" data-moreinfo=""></div>
+      <div data-id="ALL_NATURAL_GAS" data-view="Meter" data-title="" data-moreinfo="" data-min="0" data-max="100000"></div>
     </li>
 
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="ALL_WATER" data-view="Powernumber" data-title="" data-moreinfo=""></div>
+      <div data-id="ALL_WATER" data-view="Meter" data-title="" data-moreinfo="" data-min="0" data-max="100000"></div>
     </li>
 
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="ALL_WIND" data-view="Powernumber" data-title="" data-moreinfo=""></div>
+      <div data-id="ALL_WIND" data-view="Meter" data-title="" data-moreinfo="" data-min="0" data-max="100000"></div>
     </li>
 
     <li data-row="1" data-col="1" data-sizex="2" data-sizey="1">
