The units are now in the moreinfo property instead of the title

--- a/dashboards/co2.erb
+++ b/dashboards/co2.erb
@@ -6,7 +6,7 @@
     </li>
 
     <li data-row="1" data-col="1" data-sizex="2" data-sizey="1">
-      <div data-id="GRAPH_EMISSIONS_INTENSITY" data-view="Graph" data-title="" style="background-color:#ff9618"></div>
+      <div data-id="GRAPH_EMISSIONS_INTENSITY" data-view="Graph" data-title="" style="background-color:#ff9618" data-moreinfo="In t C02e / MW sent out"></div>
     </li>
 
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="2">
