Added a list of country and their carbon intensity

--- a/dashboards/co2.erb
+++ b/dashboards/co2.erb
@@ -2,7 +2,7 @@
 <div class="gridster">
   <ul>
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="welcome" data-view="Text" data-title="Carbon Emissions" data-text="Track direct carbon emissions from the operation of the Australian NEM."></div>
+      <div data-id="welcome" data-view="Text" data-title="Carbon Emissions" data-text="Track direct carbon emissions from the operation of the Australian grid (NEM)."></div>
     </li>
 
     <li data-row="1" data-col="1" data-sizex="2" data-sizey="1">
@@ -19,6 +19,10 @@
 
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
       <div data-id="FUEL_SHARE" data-view="List" data-unordered="true" data-suffix=" %" data-title="" data-moreinfo=""></div>
+    </li>
+
+    <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+      <div data-id="WORLD_EMISSIONS_INTENSITY" data-view="List" data-unordered="true" data-title="" data-moreinfo="In t C02e / MW sent out"></div>
     </li>
 
   </ul>
