Adjusted unit label of emission intensity to MWh instead of MW

--- a/dashboards/co2.erb
+++ b/dashboards/co2.erb
@@ -6,11 +6,11 @@
     </li>
 
     <li data-row="1" data-col="1" data-sizex="2" data-sizey="1">
-      <div data-id="GRAPH_EMISSIONS_INTENSITY" data-view="Graph" data-title="" style="background-color:#ff9618" data-moreinfo="In t C02e / MW sent out"></div>
+      <div data-id="GRAPH_EMISSIONS_INTENSITY" data-view="Graph" data-title="" style="background-color:#ff9618" data-moreinfo="t C02e / MWh sent out"></div>
     </li>
 
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="2">
-      <div data-id="CO2_INTENSITY" data-view="List" data-unordered="true" data-title="" data-moreinfo="In t C02e / MW sent out"></div>
+      <div data-id="CO2_INTENSITY" data-view="List" data-unordered="true" data-title="" data-moreinfo="t C02e / MWh sent out"></div>
     </li>
 
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
@@ -22,7 +22,7 @@
     </li>
 
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="WORLD_EMISSIONS_INTENSITY" data-view="List" data-unordered="true" data-title="" data-moreinfo="In t C02e / MW sent out"></div>
+      <div data-id="WORLD_EMISSIONS_INTENSITY" data-view="List" data-unordered="true" data-title="" data-moreinfo="t C02e / MWh sent out"></div>
     </li>
 
   </ul>
