Added update of atmospheric CO2 concentration

--- a/dashboards/co2.erb
+++ b/dashboards/co2.erb
@@ -25,6 +25,11 @@
       <div data-id="WORLD_EMISSIONS_INTENSITY" data-view="List" data-unordered="true" data-title="" data-moreinfo="t C02e / MWh sent out"></div>
     </li>
 
+    <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+      <div data-id="WORLD_ATMOSPHERIC_CO2" data-view="Number" data-suffix=" ppm" data-title="" data-moreinfo="ppm"></div>
+    </li>
+
+
   </ul>
   <center><div style="font-size: 12px">Source JSON <a href="http://app.carbongis.com.au/nem2json/dispatch.json">here</a>.</div></center>
 </div>
